feat: implement collections management with CRUD operations
- Added collections.rs to handle collection actions such as listing, showing, running, and deleting collections.
- Introduced AppConfig struct in config.rs to manage application configuration including default headers, base URL, timeout settings, and collections directory.
- Created display.rs for formatted output, including status lines, request/response headers, and pretty-printing JSON bodies.
- Implemented error handling with AppError in error.rs for various error types including HTTP, IO, JSON parsing, and configuration issues.
- Developed history.rs to manage request history, allowing loading, saving, and printing of history entries.
- Updated main.rs to integrate new features, including handling HTTP commands and collection actions.
- Created equest.rs for building and managing HTTP requests, including parsing headers and query parameters.
- Added esponse.rs to handle HTTP responses and print them according to user preferences.
- Implemented a TUI (Text User Interface) in 	ui module for interactive request management, including app state and event handling.
- Added tests for request handling and display logic in 	ests directory to ensure functionality and correctness.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,59 @@
 [package]
-name = "RustRest"
-version = "0.1.0"
-edition = "2024"
+name        = "rustrest"
+version     = "0.1.0"
+edition     = "2021"
+description = "A modern, fast HTTP client for the terminal"
+license     = "MIT"
+
+[lib]
+name = "rustrest"
+path = "src/lib.rs"
+
+[[bin]]
+name = "rr"
+path = "src/main.rs"
 
 [dependencies]
+# CLI parsing
+clap = { version = "4", features = ["derive", "env", "color"] }
+
+# HTTP client
+reqwest = { version = "0.12", features = ["json", "multipart", "stream", "cookies", "gzip"] }
+
+# Async runtime
+tokio = { version = "1", features = ["full"] }
+
+# Serialization
+serde      = { version = "1", features = ["derive"] }
+serde_json = { version = "1", features = ["preserve_order"] }
+
+# Error handling
+anyhow    = "1"
+thiserror = "1"
+
+# Terminal colours & formatting
+colored   = "2"
+indicatif = "0.17"
+
+# Platform config / data directories
+dirs = "5"
+
+# Timestamps
+chrono = { version = "0.4", features = ["serde"] }
+
+# URL parsing
+url = "2"
+
+# TUI — Phase 3
+ratatui   = "0.27"
+crossterm = "0.27"
+
+[dev-dependencies]
+tokio-test = "0.4"
+mockito    = "1"
+
+[profile.release]
+opt-level     = 3
+lto           = true
+codegen-units = 1
+strip         = true
